<resources>
    <string name="app_name">MyAvatar</string>
    <string name="txt_btnCancelarDialog">Cancelar</string>
    <string name="txt_btnAceptarDialog">Aceptar</string>
    <string name="txt_avatar">Avatar</string>
    <string name="txt_genero">Sexo</string>
    <string name="txt_btnCrear">CREAR</string>
    <string name="txt_btnlimpiar">LIMPIAR</string>
    <string name="txt_caracteristicas">CUALIDADES PRINCIPALES</string>
    <string name="lbl_vida">VIDA</string>
    <string name="lbl_magia">MAGIA</string>
    <string name="lbl_fuerza">FUERZA</string>
    <string name="lbl_velocidad">VELOCIDAD</string>
    <string name="txt_imagenAvatar">Imagen avatar</string>
    <string name="txt_imagenProfesion">Imagen profesión</string>
    <string name="txt_dialogEspecie">Selecciona su especie</string>
    <string name="txt_radioElfo">Elfo</string>
    <string name="txt_radioHobbit">Hobbit</string>
    <string name="txt_radioHumano">Humano</string>
    <string name="txt_radioEnano">Enano</string>
    <string name="txt_dialogNombreAvatar">Ponle nombre a tu avatar</string>
    <string name="txt_hintNombre">Escribe aquí el nombre de tu avatar</string>
    <string name="txt_dialogProfesion">Selecciona una profesión</string>
    <string name="txt_radioArquero">Arquero</string>
    <string name="txt_radioGuerrero">Guerrero</string>
    <string name="txt_radioMago">Mago</string>
    <string name="txt_radioHerrero">Herrero</string>
    <string name="txt_radioMinero">Minero</string>
    <string name="txt_dialogSexo">Selecciona su sexo</string>
    <string name="txt_radioHombre">VARÓN</string>
    <string name="txt_radioMujer">HEMBRA</string>
    <string name="pts_campoVida"> puntos de hp</string>
    <string name="pts_campoMagia"> puntos de mg</string>
    <string name="pts_campoFuerza"> puntos de pw</string>
    <string name="pts_campoVelocidad"> puntos de sp</string>
    <string-array name="genero" >
        <item>@string/txt_radioHombre</item>
        <item>@string/txt_radioMujer</item>
    </string-array>
    <string-array name="especie" >
        <item>@string/txt_radioHumano</item>
        <item>@string/txt_radioElfo</item>
        <item>@string/txt_radioEnano</item>
        <item>@string/txt_radioHobbit</item>
    </string-array>
    <string-array name="profesion" >
        <item>@string/txt_radioGuerrero</item>
        <item>@string/txt_radioMago</item>
        <item>@string/txt_radioMinero</item>
        <item>@string/txt_radioHerrero</item>
        <item>@string/txt_radioArquero</item>
    </string-array>

</resources>