<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupProfesion"
        android:layout_width="185dp"
        android:layout_height="241dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioBtnArquero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_radioArquero" />

        <RadioButton
            android:id="@+id/radioBtnGuerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_radioGuerrero" />

        <RadioButton
            android:id="@+id/radioBtnMago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_radioMago" />

        <RadioButton
            android:id="@+id/radioBtnMinero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_radioMinero" />

        <RadioButton
            android:id="@+id/radioBtnHerrero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_radioHerrero" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>